# crabgal

./: .gitignore  Cargo.toml  README.md  build.rs  crabgal.cfg
.cargo/: config.toml
.github/actions/setup-video/: action.yml
.github/workflows/: ci.yml  release.yml
assets/icons/: crabgal.icns
crabgal-cli/: Cargo.toml
crabgal-cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  model.rs  runtime.rs
crates/core/src/model/: action.rs  mod.rs  state.rs  types.rs
crates/core/src/runtime/: step.rs
crates/crabgal-asset/: Cargo.toml
crates/crabgal-asset/src/: lib.rs
crates/crabgal-bevy/: Cargo.toml
crates/crabgal-bevy/src/: app.rs  components.rs  locale.rs  main.rs  plugin.rs  resources.rs  save.rs  viewport.rs
crates/crabgal-bevy/src/game/: mod.rs  resize.rs  tick.rs
crates/crabgal-bevy/src/render/: blur.rs  blur.wgsl
crates/crabgal-bevy/src/scene/: assets.rs  audio.rs  background.rs  mod.rs  sprites.rs
crates/crabgal-bevy/src/systems/: blur_regions.rs  loading.rs  mod.rs  render_bg.rs  render_sprites.rs  resize.rs  textbox.rs  tick.rs
crates/crabgal-bevy/src/systems/shaders/: hblur.wgsl  vblur.wgsl
crates/crabgal-bevy/src/ui/: choice.rs  control_bar.rs  dialog.rs  loading.rs  mod.rs  text_style.rs  textbox.rs  title.rs
crates/crabgal-core/: Cargo.toml
crates/crabgal-core/src/: action.rs  config.rs  dissolve.rs  expression.rs  lib.rs  state.rs  step.rs  types.rs
crates/crabgal-render/: Cargo.toml
crates/crabgal-render/src/: blur.rs  lib.rs  shaders.rs  text.rs
crates/crabgal-script/: Cargo.toml
crates/crabgal-script/src/: lib.rs  parser.rs  project.rs  report.rs  watcher.rs  webgal_parser.rs
crates/crabgal-ui/: Cargo.toml
crates/crabgal-ui/src/: choices.rs  control_bar.rs  lib.rs  menu.rs  textbox.rs
crates/loader/: Cargo.toml
crates/loader/benches/: hexz_loader.rs
crates/loader/src/: adapter.rs  language.rs  lib.rs  loader.rs  report.rs
crates/loader/src/adapter/: asset.rs  editor.rs  mod.rs  script.rs  store.rs
crates/loader/src/adapter/asset/: auto.rs  fs.rs  hexz.rs  mod.rs
crates/loader/src/adapter/editor/: letsgal.rs  mod.rs
crates/loader/src/adapter/editor/letsgal/: compile.rs  mod.rs  model.rs
crates/loader/src/adapter/editor/letsgal/studio/: extension.json  mod.rs
crates/loader/src/adapter/script/: webgal.rs
crates/loader/src/adapter/script/webgal/: mod.rs
crates/loader/src/adapter/store/: crabgal.rs  mod.rs
crates/loader/src/adapter/store/fixtures/: store-v5.sav  store-v7.sav
crates/loader/src/loader/: mod.rs  scenes.rs  source.rs  watcher.rs
crates/loader/tests/fixtures/: store-v8.sav  store-v9.sav
crates/loader/tests/fixtures/letsgal-1.6.3/: characters.json  project.json
crates/loader/tests/fixtures/letsgal-1.6.3/.studio/: state.json
crates/loader/tests/fixtures/letsgal-1.6.3/chapters/: Compatibility.json
crates/loader/tests/fixtures/letsgal-1.8.0/: project.json  scenes.json
crates/loader/tests/fixtures/letsgal-1.8.0/chapters/: Compatibility.json  Title.json
crates/script/: Cargo.toml
crates/script/src/: language.rs  lib.rs  report.rs
crates/script/src/adapter/: mod.rs  webgal.rs
crates/script/src/workspace/: loader.rs  mod.rs
crates/script/tests/: webgal_demo.txt
dev/docs/: 01-language-and-stack.md  02-ecs-architecture.md  03-render-pipeline.md  04-rollback-and-save.md  05-bevy-architecture.md  05-script-dsl.md  06-hexz-packaging.md  07-resource-and-packaging.md  09-webgal-script-reference.md  10-webgal-k-gap-analysis.md  11-engine-advantages.md  12-phase1-acceptance.md  13-phase3-acceptance.md  14-phase4-acceptance.md  PROJECT.md  TODO.md  performance-baseline.md
dev/docs/acceptance/: 12-phase1-acceptance.md  13-phase3-acceptance.md  14-phase4-acceptance.md  15-phase5-acceptance.md  16-phase6-acceptance.md  17-phase7-acceptance.md  18-letsgal-studio-acceptance.md  phases.md
dev/docs/architecture/: 01-language-and-stack.md  02-ecs-architecture.md  04-rollback-and-save.md  05-bevy-architecture.md  06-hexz-packaging.md  07-content-loader.md  08-letsgal-studio.md
dev/docs/reference/: 07-references.md  09-webgal-script-reference.md  10-webgal-k-gap-analysis.md  11-engine-advantages.md  12-letsgal-studio-extension-api.md
dev/docs/webgal-compatibility/: README.md  internal-format.md  semantic-matrix.md  test-results.md  unsupported.md  visual-audit.md
dev/scripts/: audio-features.sh  bundle-macos.sh  package-release.sh
dev/scripts/lib/: audio-features.sh
projects/test-project/: ACCEPTANCE.md  ASSETS.md  README.md  characters.json  config.yaml  project.json  scenes.json
projects/test-project/assets/: .manifest.json  background  bgm  figure  vocal
projects/test-project/chapters/: Stage 1.8.json
projects/test-project/scripts/: 01_dialogue_textbox.txt  02_change_reentry.txt  02_flow_variables.txt  04_transitions.txt  06_particles.txt  09_end.txt  demo.crab  full_showcase.txt  phase1_end.txt  phase1_sub.txt  phase4_audio.txt  phase5_presentation.txt  phase6_text.txt  phase7_engineering.txt  start.txt
src/: lib.rs  main.rs  runtime.rs  storage.rs  ui.rs
src/assets/audio/: mouse-enter.opus
src/assets/shaders/: particle_material.wgsl  stage_material.wgsl
src/render/: blur.rs  blur.wgsl
src/runtime/: adapter_tui.rs  asset_reader.rs  audio.rs  bootstrap.rs  editor_bridge.rs  host.rs  input.rs  lifecycle.rs  logging.rs  mod.rs  platform.rs  resize.rs  resources.rs  tick.rs  viewport.rs
src/scene/: assets.rs  audio.rs  background.rs  effects.rs  images.rs  mod.rs  sprites.rs  video.rs
src/scene/effects/: material.rs  particles.rs  stage_material.wgsl
src/storage/: backup.rs  gallery.rs  mod.rs  profile.rs  read_history.rs  save.rs  settings.rs
src/ui/: activity.rs  backlog.rs  choice.rs  dialog.rs  foundation.rs  locale.rs  menu.rs  mod.rs  overlays.rs  performance.rs  save_load.rs  screens.rs  settings_panel.rs  support.rs  text_style.rs  textbox.rs  title.rs
src/ui/overlays/: backlog.rs  dialog.rs  mod.rs  presentation.rs  user_input.rs
src/ui/screens/: extra.rs  (+5 more)
test-project/: config.yaml
tests/: showcase_coverage.rs
(+27 files in other folders)
