[workspace]
resolver = "2"
members = [
    "crates/*",
]
default-members = ["."]

[package]
name = "crabgal"
version.workspace = true
edition.workspace = true
description = "A dedicated visual-novel engine with WebGAL script compatibility"

[features]
default = ["audio-all", "ui-sounds"]
audio-all = ["bundled-opus", "audio-wav", "audio-mp3", "audio-vorbis", "audio-flac"]
ui-sounds = ["bundled-opus"]
audio-opus = ["dep:rodio", "dep:symphonia", "dep:symphonia-adapter-libopus"]
bundled-opus = ["audio-opus", "symphonia-adapter-libopus/bundled"]
audio-wav = ["bevy/wav"]
audio-mp3 = ["bevy/mp3"]
audio-vorbis = ["bevy/vorbis"]
audio-flac = ["bevy/flac"]

[workspace.package]
version = "0.8.0"
edition = "2024"

# Disable icu_provider's debug eprintln! fallback in dev builds.
# Without this, icu_provider prints "ICU4X data error: ..." to stderr
# every frame when debug_assertions is enabled (dev profile default),
# even with the "logging" feature disabled.
[profile.dev.package.icu_provider]
debug-assertions = false

[workspace.dependencies]
crabgal-core = { path = "crates/core" }
crabgal-loader = { path = "crates/loader" }

log = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
crc32fast = "1"
notify = "8.2"
noyalib = { version = "0.0.15", default-features = false, features = ["std", "fast-int", "fast-float"] }
hexz_k = { git = "https://github.com/maincoretech/hexz_k", rev = "4cf5287", default-features = false }
bevy = { version = "0.19", default-features = false }
libwebp-sys = "0.14.4"
futures-lite = "2"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
webbrowser = "1"
rodio = { version = "0.22.2", default-features = false }
symphonia = { version = "0.6", default-features = false, features = ["ogg"] }
symphonia-adapter-libopus = { version = "0.3", default-features = false }

[dependencies]
crabgal-core = { workspace = true }
crabgal-loader = { workspace = true }
log = { workspace = true }
postcard = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
libwebp-sys = { workspace = true }
futures-lite = { workspace = true }
rfd = { workspace = true }
webbrowser = { workspace = true }
rodio = { workspace = true, optional = true }
symphonia = { workspace = true, optional = true }
symphonia-adapter-libopus = { workspace = true, optional = true }
bevy = { workspace = true, features = ["bevy_winit", "bevy_log", "bevy_render", "bevy_sprite", "bevy_ui", "bevy_ui_render", "bevy_audio", "png", "jpeg"] }

# Winit has no implicit Linux backend when Bevy's default features are disabled.
# X11 also covers Wayland desktops through XWayland without adding native
# Wayland development libraries to release builds.
[target.'cfg(target_os = "linux")'.dependencies]
bevy = { workspace = true, features = ["x11"] }
