[workspace]
resolver = "2"
members = [
    "crates/*",
]
default-members = ["."]

[package]
name = "crabgal"
version.workspace = true
edition.workspace = true
description = "A dedicated visual-novel engine with WebGAL script compatibility"

[features]
default = ["audio-all", "ui-sounds"]
audio-all = ["bundled-opus", "audio-wav", "audio-mp3", "audio-vorbis", "audio-flac"]
ui-sounds = ["bundled-opus"]
audio-opus = ["dep:rodio", "dep:symphonia", "dep:symphonia-adapter-libopus"]
bundled-opus = ["audio-opus", "symphonia-adapter-libopus/bundled"]
audio-wav = ["bevy/wav"]
audio-mp3 = ["bevy/mp3"]
audio-vorbis = ["bevy/vorbis"]
audio-flac = ["bevy/flac"]
video-ffmpeg = ["dep:video-rs", "dep:tempfile", "dep:rodio"]

[workspace.package]
version = "0.8.1"
edition = "2024"

# Disable icu_provider's debug eprintln! fallback in dev builds.
# Without this, icu_provider prints "ICU4X data error: ..." to stderr
# every frame when debug_assertions is enabled (dev profile default),
# even with the "logging" feature disabled.
[profile.dev]
# Interactive previews process full-HD pixels every frame. A small amount of
# optimization keeps `cargo dev` representative without turning it into a slow
# release build or removing useful debug information.
opt-level = 1
debug = 1

[profile.dev.package.icu_provider]
debug-assertions = false

[workspace.dependencies]
crabgal-core = { path = "crates/core" }
crabgal-loader = { path = "crates/loader" }

log = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
unicode-segmentation = "1.13"
crc32fast = "1"
notify = "8.2"
noyalib = { version = "0.0.15", default-features = false, features = ["std", "fast-int", "fast-float"] }
hexz_k = { git = "https://github.com/maincoretech/hexz_k", rev = "4cf5287", default-features = false }
bevy = { version = "0.19", default-features = false }
libwebp-sys = "0.14.4"
futures-lite = "2"
rfd = { version = "0.17.2", default-features = false }
webbrowser = "1"
rodio = { version = "0.22.2", default-features = false }
symphonia = { version = "0.6", default-features = false, features = ["ogg"] }
symphonia-adapter-libopus = { version = "0.3", default-features = false }
video-rs = { version = "0.11", default-features = false }
tempfile = "3"
winit = { version = "0.30.13", default-features = false }
crossterm = "0.29.0"
fs2 = "0.4"

[dependencies]
crabgal-core = { workspace = true }
crabgal-loader = { workspace = true }
log = { workspace = true }
postcard = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
libwebp-sys = { workspace = true }
futures-lite = { workspace = true }
notify = { workspace = true }
rfd = { workspace = true }
webbrowser = { workspace = true }
rodio = { workspace = true, optional = true }
symphonia = { workspace = true, optional = true }
symphonia-adapter-libopus = { workspace = true, optional = true }
video-rs = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
winit = { workspace = true }
crossterm = { workspace = true }
fs2 = { workspace = true }
bevy = { workspace = true, features = ["bevy_winit", "bevy_log", "bevy_render", "bevy_sprite", "bevy_ui", "bevy_ui_render", "bevy_audio", "png", "jpeg"] }

[build-dependencies]
winresource = "0.1.31"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication", "NSImage", "NSResponder", "NSRunningApplication"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSData"] }

# Winit has no implicit Linux backend when Bevy's default features are disabled.
# X11 also covers Wayland desktops through XWayland without adding native
# Wayland development libraries to release builds.
[target.'cfg(target_os = "linux")'.dependencies]
bevy = { workspace = true, features = ["x11"] }
rfd = { workspace = true, features = ["xdg-portal"] }
