[package]
name = "crabgal-cli"
version = "0.1.0"
edition = "2024"
description = "crabgal CLI: dev / check / build"

[[bin]]
name = "crabgal"
path = "src/main.rs"

[dependencies]
crabgal-core = { workspace = true }
crabgal-script = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
image = { workspace = true }
bincode = { workspace = true }
notan = { workspace = true }
