[package]
name = "crabgal-core"
version.workspace = true
edition.workspace = true
description = "Language-neutral visual-novel model and deterministic state machine"

[dependencies]
serde = { workspace = true }
noyalib = { workspace = true }
log = { workspace = true }
postcard = { workspace = true }
unicode-segmentation = { workspace = true }
