[package]
name = "crabgal-bevy"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "crabgal"
path = "src/main.rs"

[dependencies]
crabgal-core = { workspace = true }
crabgal-script = { workspace = true }
log = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
bevy = { version = "0.19", default-features = false, features = ["bevy_winit", "bevy_log", "bevy_render", "bevy_sprite", "bevy_ui", "bevy_ui_render", "png", "webp", "jpeg", "debug", "asset_processor"] }
