[package]
name = "crabgal-script"
version = "0.3.0"
edition = "2024"
description = "crabgal DSL parser and hot-reload watcher"

[dependencies]
crabgal-core = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
serde_json = { workspace = true }
