[package]
name = "crabgal-loader"
version.workspace = true
edition.workspace = true
description = "Unified asset/source and script adapters with hot reload"

[dependencies]
crabgal-core = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
crc32fast = { workspace = true }
bincode = { workspace = true }
hexz_k = { workspace = true }
