[package]
name = "crabgal-script"
version.workspace = true
edition.workspace = true
description = "Source-language adapters, diagnostics, project loading and hot reload"

[dependencies]
crabgal-core = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
serde_json = { workspace = true }
